[chromium] wrong transform causing incorrect culling https://bugs.webkit.org/show_bug.cgi?id=80471

Reviewed by James Robinson.

Source/WebCore:

Unit test added to CCRenderSurfaceTest.cpp

In addition to using originTransform() instead of drawTransform(),
this patch shuffles a bit of code so that a unit test can be
easily added.

* platform/graphics/chromium/cc/CCRenderPass.cpp:
(WebCore::CCRenderPass::appendQuadsForRenderSurfaceLayer):
* platform/graphics/chromium/cc/CCRenderSurface.cpp:
(WebCore::CCRenderSurface::createSharedQuadState):
(WebCore):
* platform/graphics/chromium/cc/CCRenderSurface.h:
(CCRenderSurface):

Source/WebKit/chromium:

* tests/CCRenderSurfaceTest.cpp:
(WebCore::TEST):
(WebCore):


Canonical link: https://commits.webkit.org/98211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110635 268f45cc-cd09-0410-ab3c-d52691b4dbfc